# EdgeDetections

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
.github/workflows/: ci.yml
Source/: Base.h  BoxKernel.h  CMakeLists.txt  Process.hpp  Sobel.h  Sobel.hpp
Tests/: CMakeLists.txt  EdgeDetection_test.cc
